[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Textures/death_screen.png" type="Texture" id=1]
[ext_resource path="res://UI/Textures/win_screen.png" type="Texture" id=2]
[ext_resource path="res://UI/Screens/EndScreen.gd" type="Script" id=3]

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="DeathScreen" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="RetryButton" type="TextureButton" parent="DeathScreen"]
margin_left = 346.0
margin_top = 303.0
margin_right = 562.0
margin_bottom = 343.0
mouse_default_cursor_shape = 2

[node name="QuitButton" type="TextureButton" parent="DeathScreen"]
margin_left = 325.0
margin_top = 369.0
margin_right = 522.0
margin_bottom = 414.0
mouse_default_cursor_shape = 2

[node name="WinScreen" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="KeepGoing" type="TextureButton" parent="WinScreen"]
margin_left = 265.0
margin_top = 233.0
margin_right = 575.0
margin_bottom = 292.0
mouse_default_cursor_shape = 2

[node name="Quit" type="TextureButton" parent="WinScreen"]
margin_left = 274.0
margin_top = 328.0
margin_right = 577.0
margin_bottom = 379.0
mouse_default_cursor_shape = 2

[connection signal="pressed" from="DeathScreen/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="DeathScreen/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="WinScreen/KeepGoing" to="." method="_on_KeepGoing_pressed"]
[connection signal="pressed" from="WinScreen/Quit" to="." method="_on_Quit_pressed"]
